uchar.h: Add missing include of stdint.h.

Fixes #17040.